test/grammar/datatype/dict/indexing_in_comprehension_fail_0/stderr.golden
error[E2A31]: IllegalAttributeError
  --> ${CWD}/main.k:16:13
   |
16 |             service: service["name"],
   |             ^ A attribute must be string type, got '{str:str}'
   |